--- a/Juegobotella/.project
+++ b/Juegobotella/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TresEnRaya</name>
+	<name>Juego</name>
 	<comment></comment>
 	<projects>
 	</projects>
